--- a/experience.html
+++ b/experience.html
@@ -151,7 +151,7 @@
 
 
 <!--footer parts start -->
-<footer class="container-fluid  footer_des">
+<footer class="container-fluid  footer_des_abs">
 <div class="row">
     <div class="col-md-12  footer_color text-decoration-none text-center">
         <h6>
