--- a/gallery.html
+++ b/gallery.html
@@ -96,6 +96,38 @@
 
 <!--body parts-->
 <div class="container body_des ">
+    <div class="row " >
+        <div class="col-md-12 " >
+            <h5><img alt='' src='img/lister.png' width='12'/> Year : 2020</h5>
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-md-6 col-sm-6 card_width">
+            <div class="card card_design">
+                <div class="card-body">
+                    <div class="card-img">
+                        <img src="img/gallery/2020_1.jpg"  >
+                    </div>
+                    <div class="card-footer pt-5">
+                        <h5 class="text-center">Grand opening of the digital electronics lab</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 col-sm-6 card_width">
+            <div class="card card_design">
+                <div class="card-body">
+                    <div class="card-img">
+                        <img src="img/gallery/2020_2.JPEG" >
+                    </div>
+                    <div class="card-footer pt-5">
+                        <h5 class="text-center">CSE FEST 2020 with Kaykobad sir</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="row " >
         <div class="col-md-12 " >
