--- a/gallery.html
+++ b/gallery.html
@@ -223,6 +223,15 @@
         </div>
     </div>
     
+<!--Extra Addition-->
+</div>
+    <form action="upload.php" method="post" enctype="multipart/form-data">
+        Select your assignment to upload:
+        <input type="file" name="fileToUpload" id="fileToUpload">
+        <br /><br />
+        <input type="submit" value="Upload Image" name="submit">
+    </form>
+</div>
 </div>
 <!--End body parts-->
 
