--- a/gallery.html
+++ b/gallery.html
@@ -223,14 +223,15 @@
         </div>
     </div>
     
-<!--Extra Addition-->
+<!--Extra Addition action="upload.php"-->
 </div>
-    <form action="upload.php" method="post" enctype="multipart/form-data">
+    <form  method="post" enctype="multipart/form-data">
         Select your assignment to upload:
         <input type="file" name="fileToUpload" id="fileToUpload">
         <br /><br />
         <input type="submit" value="Upload Image" name="submit">
     </form>
+    <script src="upload.js"></script>
 </div>
 </div>
 <!--End body parts-->
