--- a/education.html
+++ b/education.html
@@ -27,10 +27,8 @@
             <a class="" href='https://orcid.org/0000-0002-6337-3571' title='Orcid'><img src="img/orcid-brands.svg" height="30px" width="30px"></a>
             <a class="" href='https://dblp.uni-trier.de/pers/hd/h/Hasan:Md_Mahedi' title='dblp'><img src="img/dblp-512.png" height="30px" width="30px"></a>
             <a class="fa fa-twitter-square" href='https://twitter.com/mahedi_61' title='Twitter'></a>
-            <a class="fa fa-facebook-square" href='https://www.facebook.com/mahedi61' title='Facebook'></a>
             <a class="fa fa-google-plus-square" href='https://scholar.google.com/citations?hl=en&user=m3MlVBUAAAAJ#' title='Google Scholar'></a>
             <a class="" href='https://www.researchgate.net/profile/Md_Mahedi_Hasan4' title="ResearchGate"><img src="img/researchgate-solid.svg"  height="30px" width="30px"></a> 
-            <a class="fa fa-youtube" href='https://www.youtube.com/channel/UCgHJ-gsN1eFWRhxDmWC3VDA' title='Youtube'></a>
         </div>
         </div>
     </div>
@@ -43,15 +41,15 @@
 <div class="container top_info_content">
     <div class="row">
         <div class="col-md-2  col-">
-            <img class="rounded-circle" src="img/cup_of_tea.png" height="200px">
+            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="200px">
         </div>
         <div class="col-md-8  col- ">
             <div class="top_info text-justify text-center">
                 <h1>Md Mahedi Hasan</h1>
-                <h3>M.Sc Student at IICT, BUET</h3>
+                <h3>M.Sc at IICT, BUET</h3>
                 <h6>Lecturer, Department of Computer Science and Engineering (CSE)<br/>
                     Manarat International University (MIU), Dhaka, Bangladesh</h6>
-                <h4>Research Interest: Deep Learning, Computer Vision
+                <h4>Research Interest: Deep Learning, Computer Vision, Biometrics
                 </h4>
             </div>
 
@@ -77,7 +75,7 @@
                         <li class="active"><a href="index.html" class="nav-link  ">Home</a></li>
                         <li style="padding-left: 10px;"><a href="publication.html" class="nav-link">publication</a></li>
                         <li style="padding-left: 10px;"><a href="teaching.html" class="nav-link">teaching</a></li>
-                        <li style="padding-left: 10px;"><a href="thesis_and_project.html" class="nav-link">thesis and projects</a></li>
+                        <li style="padding-left: 10px;"><a href="research_project.html" class="nav-link">research projects</a></li>
                         <li class="education" style="padding-left: 10px;"><a href="education.html" class="nav-link">education</a></li>
                         <li style="padding-left: 10px;"><a href="experience.html" class="nav-link">experience</a></li>
                         <li style="padding-left: 10px;"><a href="accolades.html" class="nav-link">accolades</a></li>
@@ -103,23 +101,34 @@
 
         <ul>
             <li>
-            <h6 ><b>M.Sc. in Information and Communication Technology (2015 - present)</b></h6>
-            <p>Bangladesh University of Engineering and Technology (BUET) | CGPA 3.58 out of 4.00</p><br>
+            <h6 ><b>M.Sc. in Information and Communication Technology (ICT) (2015 - 2020)</b></h6>
+            Bangladesh University of Engineering and Technology (BUET)<br> 
+            CGPA: 3.58 out of 4.00 <br>
+            <b>Thesis:</b> View Invariant Gait Recognition for Person Re-Identification in a Multi Surveillance Camera Environment<br>
+            <b>Advisor:</b> <a href="https://hossenmustafa.buet.ac.bd/">Dr. Hossen Asiful Mustafa</a>, Assistant Professor, IICT, BUET<br>
+            <br>
             </li>
 
             <li>
             <h6 ><b>B.Sc. in Electrical and Electronic Engineering (2008 - 2013)</b></h6>
-            <p>Khulna University of Engineering and Technology (KUET) | CGPA 3.48 out of 4.00</p><br>
+            Khulna University of Engineering and Technology (KUET) <br>
+            CGPA: 3.48 out of 4.00 <br>
+            <b>Thesis:</b>  Planning and Development of Engineering Maintenance Module of Radiological Equipment X-Ray in Rural Areas of Bangladesh.<br>
+            <b>Advisor: </b> <a href="http://www.kuet.ac.bd/eee/ahmad">Dr. Mohiuddin Ahmad </a>, Professor, EEE, KUET<br>
+            <br>
             </li>
             
             <li>
             <h6 ><b>Higher Secondary Certificate (2006 - 2008)</b></h6>
-            <p>Engineering University Higher Secondary School | GPA 5.00 out of 5.00</p><br>
+            Engineering University Higher Secondary School<br>
+            GPA: 5.00 out of 5.00<br>
+            <br>
             </li>
 
             <li>
             <h6 ><b>Secondary School Certificate (2004 - 2006)</b></h6>
-            <p>West End High School | GPA 5.00 out of 5.00</p>
+            West End High School<br>
+            GPA: 5.00 out of 5.00<br>
             </li>
         </ul> <br>
         </div>
@@ -140,13 +149,12 @@
 
 
 <!--footer parts start -->
-<footer class="container-fluid  footer_des_abs">
+<footer class="container-fluid  footer_des">
 <div class="row">
     <div class="col-md-12  footer_color text-decoration-none text-center">
         <h6>
-            Copyright &copy; 2020, Md Mahedi Hasan | Designed - Ariful Hoque
+            Copyright &copy; 2020, Md Mahedi Hasan
         </h6>
-
     </div>
 </div>
 </footer>
