--- a/publication.html
+++ b/publication.html
@@ -27,10 +27,8 @@
             <a class="" href='https://orcid.org/0000-0002-6337-3571' title='Orcid'><img src="img/orcid-brands.svg" height="30px" width="30px"></a>
             <a class="" href='https://dblp.uni-trier.de/pers/hd/h/Hasan:Md_Mahedi' title='dblp'><img src="img/dblp-512.png" height="30px" width="30px"></a>
             <a class="fa fa-twitter-square" href='https://twitter.com/mahedi_61' title='Twitter'></a>
-            <a class="fa fa-facebook-square" href='https://www.facebook.com/mahedi61' title='Facebook'></a>
             <a class="fa fa-google-plus-square" href='https://scholar.google.com/citations?hl=en&user=m3MlVBUAAAAJ#' title='Google Scholar'></a>
             <a class="" href='https://www.researchgate.net/profile/Md_Mahedi_Hasan4' title="ResearchGate"><img src="img/researchgate-solid.svg"  height="30px" width="30px"></a> 
-            <a class="fa fa-youtube" href='https://www.youtube.com/channel/UCgHJ-gsN1eFWRhxDmWC3VDA' title='Youtube'></a>
         </div>
         </div>
     </div>
@@ -43,15 +41,15 @@
 <div class="container top_info_content">
     <div class="row">
         <div class="col-md-2  col-">
-            <img class="rounded-circle" src="img/cup_of_tea.png" height="200px">
+            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="200px">
         </div>
         <div class="col-md-8  col- ">
             <div class="top_info text-justify text-center">
                 <h1>Md Mahedi Hasan</h1>
-                <h3>M.Sc Student at IICT, BUET</h3>
+                <h3>M.Sc at IICT, BUET</h3>
                 <h6>Lecturer, Department of Computer Science and Engineering (CSE)<br/>
                     Manarat International University (MIU), Dhaka, Bangladesh</h6>
-                <h4>Research Interest: Deep Learning, Computer Vision
+                <h4>Research Interest: Deep Learning, Computer Vision, Biometrics
                 </h4>
             </div>
 
@@ -77,7 +75,7 @@
                         <li class="active"><a href="index.html" class="nav-link  ">Home</a></li>
                         <li class="pub" style="padding-left: 10px;"><a href="publication.html" class="nav-link">publication</a></li>
                         <li style="padding-left: 10px;"><a href="teaching.html" class="nav-link">teaching</a></li>
-                        <li style="padding-left: 10px;"><a href="thesis_and_project.html" class="nav-link">thesis and projects</a></li>
+                        <li style="padding-left: 10px;"><a href="research_project.html" class="nav-link">research projects</a></li>
                         <li style="padding-left: 10px;"><a href="education.html" class="nav-link">education</a></li>
                         <li style="padding-left: 10px;"><a href="experience.html" class="nav-link">experience</a></li>
                         <li style="padding-left: 10px;"><a href="accolades.html" class="nav-link">accolades</a></li>
@@ -101,42 +99,52 @@
     <div class="row">
         <div class="col-md-11 text-justify">
             <h5><img alt='' src='img/lister.png' width='12'  />
-                Journal Papers </h5><br>
+                Peer-Reviewed Journal Papers </h5><br>
+                <ol type="1">
+                    <li><b>Hasan, M.M.</b>, Mustafa H.A.: “Multi-level Features Fusion for Robust Pose-based Gait Recognition
+                        using RNN,” International Journal of Computer Science and Information Security, Pittsburgh, PA,
+                        USA, Volume 18 No. 1, Jan 2020. <a href="https://www.academia.edu/41852886/Multi-Level_Feature_Fusion_for_Robust_Pose-Based_Gait_Recognition_using_RNN">PDF</a>
+                        <br>
+                    </li>
+                    <li>Haque, M.Z., <b>Hasan, M.M.</b>: “Forensic Detection of Digital Image Tampering Using Statistical
+                        Analysis,” International Journal of Computer Science and Information Security, Pittsburgh, PA, USA,
+                        Volume 18 No. 9, Sep 2020. <a href="https://doi.org/10.5281/zenodo.4130382">DOI</a>
+                        <br>
+                    </li>
+                </ol>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-11 text-justify">
             <h5><img alt='' src='img/lister.png' width='12'  />
-                Peer-Reviewed Conference Papers </h5><br>
+                Conference Papers </h5><br>
             <ol type="1">
-                <li><b>Hasan, M.M.</b>, Islam, M.S., Abdullah, S.: Robust Pose-Based Human Fall Detection
-                    Using Recurrent Neural Network. IEEE International Conference on Robotics,
-                    Automation, Artificial-Intelligence and Internet-of-Things, Dhaka, Bangladesh, 2019.</li><br>
-                <li>
-                    <b>Hasan, M.M.</b>, Abir M.M., Ibrahim M., Sayem M., Abdullah, S.: AIBangla: A
-                    Benchmark Dataset for Isolated Bangla Handwritten Basic and Compound Character
-                    Recognition. 2019 International Conference on Bangla Speech and Language
-                    Processing (ICBSLP). Sylhet, Bangladesh, 2019. 
-                    <a href="https://www.researchgate.net/publication/337499773_AIBangla_A_Benchmark_Dataset_for_Isolated_Bangla_Handwritten_Basic_and_Compound_Character_Recognition">[rg]</a>
+                <li><b>Hasan, M.M.</b>, Islam, M.S., Abdullah, S.: “Robust Pose-Based Human Fall Detection Using Recurrent 
+                    Neural Network,” IEEE International Conference on Robotics, Automation, Artificial-Intelligence
+                    and Internet-of-Things, Dhaka, Bangladesh, 2019. <a href="https://doi.org/10.1109/RAAICON48939.2019.23">DOI</a>
                 </li><br>
                 <li>
-                    Islam, S.M.S.,<b>Hasan, M.M.</b>, Abdulla, S.: Deep CNN-Based Early Detection and
-                    Grading of Diabetic Retinopathy Using Retinal Fundus Images. 1st International
-                    Conference on Machine Learning, Image Processing, Network Security and Data
-                    sciences (MIND). Kurukshetra, India, 2019. <a href="https://arxiv.org/abs/1812.10595">[arxiv]</a>
+                    <b>Hasan, M.M.</b>, Abir M.M., Ibrahim M., Sayem M., Abdullah, S.: “AIBangla: A Benchmark Dataset
+                        for Isolated Bangla Handwritten Basic and Compound Character Recognition,” 2019 International
+                        Conference on Bangla Speech and Language Processing (ICBSLP). Sylhet, Bangladesh, 2019. 
+                    <a href="https://doi.org/10.1109/ICBSLP47725.2019.201481">DOI</a>
                 </li><br>
                 <li>
-                    Abdullah, S., <b>Hasan, M.M.</b>, Islam, S.M.S.: Yolo-Based Three-Stage Network for
-                    Bangla License Plate Recognition in Dhaka Metropolitan City. 2018 International
-                    Conference on Bangla Speech and Language Processing (ICBSLP). Sylhet,
-                    Bangladesh, 2018. <a href="https://doi.org/10.1109/ICBSLP.2018.8554668">[doi]</a>
+                    Islam, S.M.S., <b>Hasan, M.M.</b>, Abdulla, S.: “Deep CNN-Based Early Detection and Grading of Diabetic 
+                    Retinopathy Using Retinal Fundus Images,” 1st International Conference on Machine Learning,
+                    Image Processing, Network Security and Data sciences (MIND). Kurukshetra, India, 2019. <a href="https://arxiv.org/abs/1812.10595">[arxiv]</a>
                 </li><br>
                 <li>
-                    Islam, S.M.S., <b>Hasan, M.M.</b>: DEEPGONET: Multi-label Prediction of Go
-                    Annotation for Protein from Sequence using Cascaded Convolutional and Recurrent
-                    Network. The 21st International Conference on Computer and Information
-                    Technology (ICCIT). Dhaka, Bangladesh, 2018. <a href="https://doi.org/10.1109/ICCITECHN.2018.8631921">[doi]</a href>
+                    Abdullah, S., <b>Hasan, M.M.</b>, Islam, S.M.S.: “Yolo-Based Three-Stage Network for Bangla License 
+                    Plate Recognition in Dhaka Metropolitan City,” 2018 International Conference on Bangla Speech and 
+                    Language Processing (ICBSLP). Sylhet, Bangladesh, 2018. <a href="https://doi.org/10.1109/ICBSLP.2018.8554668">DOI</a>
+                </li><br>
+                <li>
+                    Islam, S.M.S., <b>Hasan, M.M.</b>: “DEEPGONET: Multi-label Prediction of Go Annotation for Protein 
+                    from Sequence using Cascaded Convolutional and Recurrent Network,” The 21st International 
+                    Conference on Computer and Information Technology (ICCIT). Dhaka, Bangladesh, 2018. 
+                    <a href="https://doi.org/10.1109/ICCITECHN.2018.8631921">DOI</a href>
                 </li>
                 <br>
             </ol>
@@ -148,8 +156,8 @@
             Submitted Manuscript </h5>
             <br>
             <ol type="1">
-                <li><b>Hasan, M.M.</b>, Mustafa, H.A.: Robust pose-based multi-view gait recognition using
-                    recurrent neural network. IET Biometrics, 2019.</li><br>
+                <li>Manuscript submitted to IET Computer Vision: <b>Hasan, M.M.</b>, Mustafa H.A., “Learning View-
+                    Invariant Features using Stacked Autoencoder for Skeleton-Based Gait Recognition,” </li><br>
             </ol>
         </div>
     </div>
@@ -175,7 +183,7 @@
     <div class="row">
         <div class="col-md-12  footer_color text-decoration-none text-center">
             <h6>
-                Copyright &copy; 2020, Md Mahedi Hasan | Designed - Ariful Hoque
+                Copyright &copy; 2020, Md Mahedi Hasan
             </h6>
         </div>
     </div>
