--- a/research.html
+++ b/research.html
@@ -38,15 +38,15 @@
 <div class="container top_info_content">
     <div class="row">
         <div class="col-md-3  col-">
-            <img class="rounded-circle" src="img/cup_of_tea.png" height="200px">
+            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="200px">
         </div>
         <div class="col-md-7  col- ">
             <div class="top_info text-justify text-center">
                 <h1>Md Mahedi Hasan</h1>
-                <h3>M.Sc Student at IICT, BUET</h3>
+                <h3>M.Sc at IICT, BUET</h3>
                 <p>Lecturer, Dept. of Computer Science and Engineering (CSE)<br/>
                     Manarat International University(MIU), Dhaka, Bangladesh</p>
-                <h4>Research Interest: Computer Vision and Pattern Recognition, Machine Learning
+                <h4>Research Interest: Deep Learning, Computer Vision, Biometrics
                 </h4>
             </div>
 
