--- a/gallery.html
+++ b/gallery.html
@@ -27,10 +27,8 @@
             <a class="" href='https://orcid.org/0000-0002-6337-3571' title='Orcid'><img src="img/orcid-brands.svg" height="30px" width="30px"></a>
             <a class="" href='https://dblp.uni-trier.de/pers/hd/h/Hasan:Md_Mahedi' title='dblp'><img src="img/dblp-512.png" height="30px" width="30px"></a>
             <a class="fa fa-twitter-square" href='https://twitter.com/mahedi_61' title='Twitter'></a>
-            <a class="fa fa-facebook-square" href='https://www.facebook.com/mahedi61' title='Facebook'></a>
             <a class="fa fa-google-plus-square" href='https://scholar.google.com/citations?hl=en&user=m3MlVBUAAAAJ#' title='Google Scholar'></a>
             <a class="" href='https://www.researchgate.net/profile/Md_Mahedi_Hasan4' title="ResearchGate"><img src="img/researchgate-solid.svg"  height="30px" width="30px"></a> 
-            <a class="fa fa-youtube" href='https://www.youtube.com/channel/UCgHJ-gsN1eFWRhxDmWC3VDA' title='Youtube'></a>
         </div>
         </div>
     </div>
@@ -39,19 +37,20 @@
 <!--end anchor section-->
 
 
+
 <!--top introducing section-->
 <div class="container top_info_content">
     <div class="row">
         <div class="col-md-2  col-">
-            <img class="rounded-circle" src="img/cup_of_tea.png" height="200px">
+            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="200px">
         </div>
         <div class="col-md-8  col- ">
             <div class="top_info text-justify text-center">
                 <h1>Md Mahedi Hasan</h1>
-                <h3>M.Sc Student at IICT, BUET</h3>
+                <h3>M.Sc at IICT, BUET</h3>
                 <h6>Lecturer, Department of Computer Science and Engineering (CSE)<br/>
                     Manarat International University (MIU), Dhaka, Bangladesh</h6>
-                <h4>Research Interest: Deep Learning, Computer Vision
+                <h4>Research Interest: Deep Learning, Computer Vision, Biometrics
                 </h4>
             </div>
 
@@ -77,7 +76,7 @@
                         <li class="active"><a href="index.html" class="nav-link  ">Home</a></li>
                         <li style="padding-left: 10px;"><a href="publication.html" class="nav-link">publication</a></li>
                         <li style="padding-left: 10px;"><a href="teaching.html" class="nav-link">teaching</a></li>
-                        <li style="padding-left: 10px;"><a href="thesis_and_project.html" class="nav-link">thesis and projects</a></li>
+                        <li style="padding-left: 10px;"><a href="research_project.html" class="nav-link">research projects</a></li>
                         <li style="padding-left: 10px;"><a href="education.html" class="nav-link">education</a></li>
                         <li style="padding-left: 10px;"><a href="experience.html" class="nav-link">experience</a></li>
                         <li style="padding-left: 10px;"><a href="accolades.html" class="nav-link">accolades</a></li>
@@ -89,6 +88,7 @@
         </nav>
     </div></div>
 </div>
+
 <!--end navigation-->
 <br>
 
@@ -222,6 +222,40 @@
             </div>
         </div>
     </div>
+
+    <div class="row " >
+        <div class="col-md-12 " >
+            <h5><img alt='' src='img/lister.png' width='12'/> Year : 2017</h5>
+        </div>
+    </div>
+
+    <div class="row ">
+        <div class="col-md-6 col-sm-6 card_width">
+            <div class="card card_design">
+                <div class="card-body">
+                    <div class="card-img">
+                        <img src="img/gallery/2017_1.jpg"  >
+                    </div>
+                    <div class="card-footer pt-5">
+                        <h5 class="text-center">Gala Dinner </h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 col-sm-6 card_width">
+            <div class="card card_design">
+                <div class="card-body">
+                    <div class="card-img">
+                        <img src="img/gallery/2017_2.jpg" >
+                    </div>
+                    <div class="card-footer pt-5">
+                        <h5 class="text-center">Conference</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </div>
 <!--End body parts-->
@@ -237,7 +271,7 @@
     <div class="row">
         <div class="col-md-12  footer_color text-decoration-none text-center">
             <h6>
-                Copyright &copy; 2020, Md Mahedi Hasan | Designed - Ariful Hoque
+                Copyright &copy; 2020, Md Mahedi Hasan
             </h6>
     
         </div>
