--- a/research_project.html
+++ b/research_project.html
@@ -27,10 +27,8 @@
             <a class="" href='https://orcid.org/0000-0002-6337-3571' title='Orcid'><img src="img/orcid-brands.svg" height="30px" width="30px"></a>
             <a class="" href='https://dblp.uni-trier.de/pers/hd/h/Hasan:Md_Mahedi' title='dblp'><img src="img/dblp-512.png" height="30px" width="30px"></a>
             <a class="fa fa-twitter-square" href='https://twitter.com/mahedi_61' title='Twitter'></a>
-            <a class="fa fa-facebook-square" href='https://www.facebook.com/mahedi61' title='Facebook'></a>
             <a class="fa fa-google-plus-square" href='https://scholar.google.com/citations?hl=en&user=m3MlVBUAAAAJ#' title='Google Scholar'></a>
             <a class="" href='https://www.researchgate.net/profile/Md_Mahedi_Hasan4' title="ResearchGate"><img src="img/researchgate-solid.svg"  height="30px" width="30px"></a> 
-            <a class="fa fa-youtube" href='https://www.youtube.com/channel/UCgHJ-gsN1eFWRhxDmWC3VDA' title='Youtube'></a>
         </div>
         </div>
     </div>
@@ -43,15 +41,15 @@
 <div class="container top_info_content">
     <div class="row">
         <div class="col-md-2  col-">
-            <img class="rounded-circle" src="img/cup_of_tea.png" height="200px">
+            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="200px">
         </div>
         <div class="col-md-8  col- ">
             <div class="top_info text-justify text-center">
                 <h1>Md Mahedi Hasan</h1>
-                <h3>M.Sc Student at IICT, BUET</h3>
+                <h3>M.Sc at IICT, BUET</h3>
                 <h6>Lecturer, Department of Computer Science and Engineering (CSE)<br/>
                     Manarat International University (MIU), Dhaka, Bangladesh</h6>
-                <h4>Research Interest: Deep Learning, Computer Vision
+                <h4>Research Interest: Deep Learning, Computer Vision, Biometrics
                 </h4>
             </div>
 
@@ -77,7 +75,7 @@
                         <li class="active"><a href="index.html" class="nav-link  ">Home</a></li>
                         <li style="padding-left: 10px;"><a href="publication.html" class="nav-link">publication</a></li>
                         <li style="padding-left: 10px;"><a href="teaching.html" class="nav-link">teaching</a></li>
-                        <li class="thesis" style="padding-left: 10px;"><a href="thesis_and_project.html" class="nav-link">thesis and projects</a></li>
+                        <li class="thesis" style="padding-left: 10px;"><a href="research_project.html" class="nav-link">research projects</a></li>
                         <li style="padding-left: 10px;"><a href="education.html" class="nav-link">education</a></li>
                         <li style="padding-left: 10px;"><a href="experience.html" class="nav-link">experience</a></li>
                         <li style="padding-left: 10px;"><a href="accolades.html" class="nav-link">accolades</a></li>
@@ -95,50 +93,48 @@
 
 
 <div class="container body_des">
-    <div class="row">
-        <div class="col-md-11 text-justify">
-            <h5><img alt='' src='img/lister.png' width='12'/> Thesis</h5><br>
-           <ul >
-               <li><h6><b>Postgraduate Thesis</b></h6>
-                  <b>Thesis Title:</b>  Recognizing and tracking people by their gait signature across multiple
-                   non-intersecting surveillance cameras.<br>
-                   <b>Advisor:</b> <a href="https://hossenmustafa.buet.ac.bd/">Dr. Hossen Asiful Mustafa</a><br>
-                   <b>Status:</b> ongoing
-               </li><br>
-               
-               <li>
-                <h6><b>Undergraduate Thesis</b></h6>
-                  <b>Thesis Title:</b>  Planning and Development of Engineering maintenance module of
-                   radiological equipment X-Ray in rural areas of Bangladesh.<br>
-                   <b> Advisor: </b> <a href="http://www.kuet.ac.bd/eee/ahmad">Prof. Dr. Mohiuddin Ahmad </a>
-               </li>
-           </ul>
-        </div>
-    </div> <br><br>
 
     <div class="row">
         <div class="col-md-11 text-justify">
             <h5><img alt='' src='img/lister.png' width='12'/> Research Projects </h5> <br>
         <ol >
             <li>
-                <h6><b>Gait Based People Identification </b></h6> RNN based temporal model for people Identification based on their gait signature.
-                <a href="https://github.com/Mahedi-61/temporal_network">Report & Code</a>
+                <h6><b>Real-time Detection and Recognition of Bangladeshi License Plate</b></h6> 
+                Working on a project to develop a real-time automatic license plate recognition (ALPR) system for
+                Bangladeshi vehicles. A short version of this work has been published in an IEEE conference 2018.
             </li>
             <br>
             <li>
-                <h6><b> Development of Automated Essay Scoring</b></h6> Development of machine learning based automated essay scoring (English) system.
-                <a href="https://github.com/Mahedi-61/Essay-Scoring">Report & Code</a>
+                <h6><b>Automatic Bangla Handwritten Compound Character Recognition</b></h6>
+                Working on a project to recognize handwritten Bangla characters byintroducing AIBangla, a large-
+                scale image database for isolated Bangla basic and compound characters. The work and the dataset
+                has been published in an IEEE conference 2019.
             </li>
             <br>
             <li>
-                <h6><b>Distributed Password Cracking System</b></h6> Multiple Client based distributed online password cracking system.
-                <a href="https://github.com/Mahedi-61/Distributed-Password-Cracker">Report & Code</a>
+                <h6><b>A Real-time Bangla Sign Language Recognition System</b></h6>
+                Working on a project to develop a word-level vision-based Bangla sign language recognition system to 
+                help deaf people for effective communication. A novel temporal graph convolutional network (TGCN) 
+                has been proposed to model temporal descriptors of the sign videos for improved performance. This 
+                work has been submitted for peer review
             </li><br>
             <li>
-                <h6><b>File Encryption Decryption with DES</b></h6>DES cryptographic algorithm implementation from scratch.
-                <a href="https://github.com/Mahedi-61/File-Encryption-Decryption-with-DES">Report & Code</a>
-                </li>
+                <h6><b>Automatic Detection of Unfit Vehicles for Intelligent Transportation System</b></h6>
+                An optimized YOLOv3-based unfit vehicles detection system where Mask R-CNN has been implemented 
+                to detect the damaged portion of the vehicles This work has been submitted for peer review. 
+                This work has been submitted for peer review
+             </li>
             <br>
+            <li>
+                <h6><b>Development of An Automated Essay Scoring Engine</b></h6>
+                Designed a machine learning-based automated essay scoring (English) system. The algorithm was 
+                successfully implemented in a web-based e-learning platform developed for dept. of CSE, MIU.
+            </li><br>
+
+            <li>
+                <h6><b>Distributed Password Cracking System</b></h6>
+                Implementation of a multiple client based distributed online password cracking system
+            </li>
         </ol>
         </div>
     </div>
@@ -156,7 +152,7 @@
     <div class="row">
         <div class="col-md-12  footer_color text-decoration-none text-center">
             <h6>
-                Copyright &copy; 2020, Md Mahedi Hasan | Designed - Ariful Hoque
+                Copyright &copy; 2020, Md Mahedi Hasan
             </h6>
         </div>
     </div>
