--- a/skills.html
+++ b/skills.html
@@ -14,7 +14,7 @@
 </head>
 
 
-<body id="accolades">
+<body id="skills">
 <!--navigation start here-->
 <div class="container-fluid nav_des sticky-top">
     <div class="row ">
@@ -34,10 +34,10 @@
                             <li style="padding-left: 10px;"><a href="research_project.html" class="nav-link">projects</a></li>
                             <li style="padding-left: 10px;"><a href="education.html" class="nav-link">education</a></li>
                             <li style="padding-left: 10px;"><a href="experience.html" class="nav-link">experience</a></li>
-                            <li class="accolades" style="padding-left: 10px;"><a href="accolades.html" class="nav-link">accolades</a></li>
+                            <li style="padding-left: 10px;"><a href="accolades.html" class="nav-link">accolades</a></li>
                             <li style="padding-left: 10px;"><a href="extracurricular.html" class="nav-link">extracurricular</a></li>
                             <li style="padding-left: 10px;"><a href="affiliation.html" class="nav-link">affiliation</a></li>
-                            <li style="padding-left: 10px;"><a href="skills.html" class="nav-link">skills</a></li>
+                            <li class="skills" style="padding-left: 10px;"><a href="skills.html" class="nav-link">skills</a></li>
                         </ul>
                     </div>
                 </div>
@@ -92,22 +92,30 @@
 
 
 
+
 <!--body parts-->
+
 <div class="container body_des">
 
     <div class="row" >
         <div class="col-md-11 text-justify">
-            <h5><img alt='' src='img/lister.png' width='12' /> Academic Honors</h5><br>
-            <ul><li>
-                <h6><b>University Merit Scholarship</b></h6>
-                <p>All eight terms of undergraduate study from the Govt. of the People’s Republic of Bangladesh</p>
-                </li>
+            <h5><img alt='' src='img/lister.png' width='12' /> Technical Skills</h5><br>
+            <ul><li><p><b>Programming Languages: </b>C/C++, Java, Python</p></li>
+                <li><p><b>Web Programming: </b>PHP, JavaScript</p></li>
+                <li><p><b>Application Development: </b>Android</p></li>
+                <li><p><b>System Administration: </b>Unix/Linux</p></li>
+                <li><p><b>Developer Tools: </b>Git, Google Cloud Platform</p></li>
+                <li><p><b>Document Processing: </b>LaTeX, MS Office, Adobe Illustrator</p></li>
+                <li><p><b>Libraries: </b>NumPy, OpenCV, Pandas, Matplotlib </p></li>
             </ul>
         </div>
     </div>
-</div>
 
+</div>
 <!--End body parts-->
+
+
+
 
 <!--top scroller here-->
 <a href="#" class="go-top rounded-pill"><i class="fa fa-arrow-up"></i> </a>
