--- a/affiliation.html
+++ b/affiliation.html
@@ -14,7 +14,7 @@
 </head>
 
 
-<body id="accolades">
+<body id="affiliation">
 <!--navigation start here-->
 <div class="container-fluid nav_des sticky-top">
     <div class="row ">
@@ -34,9 +34,9 @@
                             <li style="padding-left: 10px;"><a href="research_project.html" class="nav-link">projects</a></li>
                             <li style="padding-left: 10px;"><a href="education.html" class="nav-link">education</a></li>
                             <li style="padding-left: 10px;"><a href="experience.html" class="nav-link">experience</a></li>
-                            <li class="accolades" style="padding-left: 10px;"><a href="accolades.html" class="nav-link">accolades</a></li>
+                            <li style="padding-left: 10px;"><a href="accolades.html" class="nav-link">accolades</a></li>
                             <li style="padding-left: 10px;"><a href="extracurricular.html" class="nav-link">extracurricular</a></li>
-                            <li style="padding-left: 10px;"><a href="affiliation.html" class="nav-link">affiliation</a></li>
+                            <li class="affiliation" style="padding-left: 10px;"><a href="affiliation.html" class="nav-link">affiliation</a></li>
                             <li style="padding-left: 10px;"><a href="skills.html" class="nav-link">skills</a></li>
                         </ul>
                     </div>
@@ -90,24 +90,28 @@
 
 
 
-
-
 <!--body parts-->
-<div class="container body_des">
+<div class="container body_des ">
+    <div class="row " >
+        <div class="col-md-12 " >
+            <h5><img alt='' src='img/lister.png' width='12'/> Professional Affiliations</h5>
+        </div>
 
-    <div class="row" >
-        <div class="col-md-11 text-justify">
-            <h5><img alt='' src='img/lister.png' width='12' /> Academic Honors</h5><br>
-            <ul><li>
-                <h6><b>University Merit Scholarship</b></h6>
-                <p>All eight terms of undergraduate study from the Govt. of the People’s Republic of Bangladesh</p>
-                </li>
-            </ul>
+            <div class="text-justify">
+                <br/>
+                <ul>
+                    <li><b>Head of Digital Transformation Committee (DTC)</b>, Dept. of CSE, MIU</li>
+                    <li><b>Member</b>, Computer Vision Research Group, Dept. of CSE, MIU</li>
+                    <li><b>Member</b>, AIBangla, an AI-based research group in Bangladesh</li>
+                </ul>
         </div>
     </div>
+    <br>
 </div>
-
 <!--End body parts-->
+
+
+
 
 <!--top scroller here-->
 <a href="#" class="go-top rounded-pill"><i class="fa fa-arrow-up"></i> </a>
