--- a/education.html
+++ b/education.html
@@ -9,39 +9,49 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/font-awesome.min.css" >
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     <link rel="icon" href="img/favicon.ico">
 </head>
 
 
 <body id="education">
-<!--anchor on top -->
-<div class="anchor">
-<div class="container">
-    <div class="row">
+<!--navigation start here-->
+<div class="container-fluid nav_des sticky-top">
+    <div class="row ">
+        <div class="offset-2 col-md-13">
+            <nav>
+                <div class="navbar navbar-expand-lg navbar-light  " style="margin-left: 40px;">
+                    <button type="button" class="navbar-toggler" 
+                            data-toggle="collapse" data-target="#nav1">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="nav1">
 
-        <div class="offset-3  col-md-8 col-">
-            <div class="elements ">
-            <a class="fa fa-github-square"  href='https://github.com/Mahedi-61' title='Github'> </a>
-            <a class="fa fa-linkedin-square"  href='https://www.linkedin.com/in/mahedi-hasan-2a4117147/' title='LinkedIn'></a>
-            <a class="fa fa-reddit-square" href='https://www.reddit.com/user/mahedi61' title='Reddit'></a>
-            <a class="" href='https://orcid.org/0000-0002-6337-3571' title='Orcid'><img src="img/orcid-brands.svg" height="30px" width="30px"></a>
-            <a class="" href='https://dblp.uni-trier.de/pers/hd/h/Hasan:Md_Mahedi' title='dblp'><img src="img/dblp-512.png" height="30px" width="30px"></a>
-            <a class="fa fa-twitter-square" href='https://twitter.com/mahedi_61' title='Twitter'></a>
-            <a class="fa fa-google-plus-square" href='https://scholar.google.com/citations?hl=en&user=m3MlVBUAAAAJ#' title='Google Scholar'></a>
-            <a class="" href='https://www.researchgate.net/profile/Md_Mahedi_Hasan4' title="ResearchGate"><img src="img/researchgate-solid.svg"  height="30px" width="30px"></a> 
-        </div>
-        </div>
+                        <ul class="navbar-nav">
+                            <li class="active"><a href="index.html" class="nav-link  ">Home</a></li>
+                            <li style="padding-left: 10px;"><a href="publication.html" class="nav-link">publication</a></li>
+                            <li style="padding-left: 10px;"><a href="teaching.html" class="nav-link">teaching</a></li>
+                            <li style="padding-left: 10px;"><a href="research_project.html" class="nav-link">projects</a></li>
+                            <li class="education" style="padding-left: 10px;"><a href="education.html" class="nav-link">education</a></li>
+                            <li style="padding-left: 10px;"><a href="experience.html" class="nav-link">experience</a></li>
+                            <li style="padding-left: 10px;"><a href="accolades.html" class="nav-link">accolades</a></li>
+                            <li style="padding-left: 10px;"><a href="extracurricular.html" class="nav-link">extracurricular</a></li>
+                            <li style="padding-left: 10px;"><a href="affiliation.html" class="nav-link">affiliation</a></li>
+                            <li style="padding-left: 10px;"><a href="skills.html" class="nav-link">skills</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div></div>
     </div>
-</div>
-</div>
-<!--end anchor section-->
+    <!--end navigation-->
 
 
 <!--top introducing section-->
 <div class="container top_info_content">
     <div class="row">
-        <div class="col-md-2  col-">
-            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="200px">
+        <div class="col-md-3  col-">
+            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="250px">
         </div>
         <div class="col-md-8  col- ">
             <div class="top_info text-justify text-center">
@@ -53,42 +63,31 @@
                 </h4>
             </div>
 
+            <div class="offset-4  col-md-8 col-">
+                <div class="elements ">
+                <a class="fa fa-github-square fa-2x"  style="color:#000;" href='https://github.com/Mahedi-61' title='Github'> </a> &nbsp  &nbsp
+                <a class="ai ai-google-scholar ai-2x" style="color:#000;" href='https://scholar.google.com/citations?hl=en&user=m3MlVBUAAAAJ#' title='Google Scholar'></a> &nbsp  &nbsp
+                <a class="ai ai-google-orcid ai-2x" style="color:#000;" href='https://orcid.org/0000-0002-6337-3571' title='Orcid'></a>
+                <a class="ai ai-dblp ai-2x" style="color:#000;" href='https://dblp.uni-trier.de/pers/hd/h/Hasan:Md_Mahedi' title='dblp'></a> &nbsp  &nbsp
+                <a class="ai ai-researchgate ai-2x" style="color:#000;" href='https://www.researchgate.net/profile/Md_Mahedi_Hasan4' title="ResearchGate"></a> 
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--partition-->
+<div class="container">
+    <div class="row ">
+        <div class="col-md-11">
+           <hr width="1100px;">
         </div>
     </div>
 </div>
 <!--end section-->
 
 
-<!--navigation start here-->
-<div class="container-fluid nav_des sticky-top">
-<div class="row ">
-    <div class="offset-2 col-md-14">
-        <nav>
-            <div class="navbar navbar-expand-lg navbar-light  " style="margin-left: 40px;">
-                <button type="button" class="navbar-toggler" 
-                        data-toggle="collapse" data-target="#nav1">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="nav1">
 
-                    <ul class="navbar-nav">
-                        <li class="active"><a href="index.html" class="nav-link  ">Home</a></li>
-                        <li style="padding-left: 10px;"><a href="publication.html" class="nav-link">publication</a></li>
-                        <li style="padding-left: 10px;"><a href="teaching.html" class="nav-link">teaching</a></li>
-                        <li style="padding-left: 10px;"><a href="research_project.html" class="nav-link">research projects</a></li>
-                        <li class="education" style="padding-left: 10px;"><a href="education.html" class="nav-link">education</a></li>
-                        <li style="padding-left: 10px;"><a href="experience.html" class="nav-link">experience</a></li>
-                        <li style="padding-left: 10px;"><a href="accolades.html" class="nav-link">accolades</a></li>
-                        <li style="padding-left: 10px;"><a href="gallery.html" class="nav-link">gallery</a></li>
-                        <li style="padding-left: 10px;"><a href="" class="nav-link">cv</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div></div>
-</div>
-<!--end navigation-->
-<br>
 
 
 
@@ -96,45 +95,46 @@
 <div class="container body_des">
 
     <div class="row">
-        <div class="col-md-11 text-justify">
+        <div class="col-md-12 text-justify">
             <h5><img alt='' src='img/lister.png' width='12'/> Educations</h5><br>
 
         <ul>
             <li>
-            <h6 ><b>M.Sc. in Information and Communication Technology (ICT) (2015 - 2020)</b></h6>
-            Bangladesh University of Engineering and Technology (BUET)<br> 
+            <h5 ><b>Bangladesh University of Engineering and Technology (BUET)</b></h5>
+            M.Sc. in Information and Communication Technology (ICT) (2015 - 2020)<br> 
             CGPA: 3.58 out of 4.00 <br>
             <b>Thesis:</b> View Invariant Gait Recognition for Person Re-Identification in a Multi Surveillance Camera Environment<br>
             <b>Advisor:</b> <a href="https://hossenmustafa.buet.ac.bd/">Dr. Hossen Asiful Mustafa</a>, Assistant Professor, IICT, BUET<br>
-            <br>
+            <b>Relevant Courseworks: </b> Data Warehousing and Mining, Applied Cryptography <br/>
+            <br/>
             </li>
 
+            <br/>
             <li>
-            <h6 ><b>B.Sc. in Electrical and Electronic Engineering (2008 - 2013)</b></h6>
-            Khulna University of Engineering and Technology (KUET) <br>
+            <h5 ><b>Khulna University of Engineering and Technology (KUET)</b></h5>
+            B.Sc. in Electrical and Electronic Engineering (2008 - 2013)<br>
             CGPA: 3.48 out of 4.00 <br>
             <b>Thesis:</b>  Planning and Development of Engineering Maintenance Module of Radiological Equipment X-Ray in Rural Areas of Bangladesh.<br>
             <b>Advisor: </b> <a href="http://www.kuet.ac.bd/eee/ahmad">Dr. Mohiuddin Ahmad </a>, Professor, EEE, KUET<br>
-            <br>
+            <b>Relevant Courseworks: </b> Numerical Methods and Statistics, Mathematics I-IV, Programming Technique I-II<br/>
+            <br/>
             </li>
             
+            <br/>
             <li>
-            <h6 ><b>Higher Secondary Certificate (2006 - 2008)</b></h6>
+            <h5 ><b>Higher Secondary Certificate (2006 - 2008)</b></h5>
             Engineering University Higher Secondary School<br>
             GPA: 5.00 out of 5.00<br>
             <br>
             </li>
 
+            <br/>
             <li>
-            <h6 ><b>Secondary School Certificate (2004 - 2006)</b></h6>
+            <h5><b>Secondary School Certificate (2004 - 2006)</b></h5>
             West End High School<br>
             GPA: 5.00 out of 5.00<br>
             </li>
         </ul> <br>
-        </div>
-
-        <div class="col-md-11 text-justify">
-            <h5><img alt='' src='img/lister.png' width='12'/> Internships</h5><br>
         </div>
     </div>
 </div>
