--- a/gallery.html
+++ b/gallery.html
@@ -9,93 +9,54 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/font-awesome.min.css" >
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     <link rel="icon" href="img/favicon.ico">
 </head>
 
 
 <body id="gallery">
-<!--anchor on top -->
-<div class="anchor">
-<div class="container">
-    <div class="row">
+<!--navigation start here-->
+<div class="container-fluid nav_des sticky-top">
+    <div class="row ">
+        <div class="offset-2 col-md-13">
+            <nav>
+                <div class="navbar navbar-expand-lg navbar-light  " style="margin-left: 40px;">
+                    <button type="button" class="navbar-toggler" 
+                            data-toggle="collapse" data-target="#nav1">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="nav1">
 
-        <div class="offset-3  col-md-8 col-">
-            <div class="elements ">
-            <a class="fa fa-github-square"  href='https://github.com/Mahedi-61' title='Github'> </a>
-            <a class="fa fa-linkedin-square"  href='https://www.linkedin.com/in/mahedi-hasan-2a4117147/' title='LinkedIn'></a>
-            <a class="fa fa-reddit-square" href='https://www.reddit.com/user/mahedi61' title='Reddit'></a>
-            <a class="" href='https://orcid.org/0000-0002-6337-3571' title='Orcid'><img src="img/orcid-brands.svg" height="30px" width="30px"></a>
-            <a class="" href='https://dblp.uni-trier.de/pers/hd/h/Hasan:Md_Mahedi' title='dblp'><img src="img/dblp-512.png" height="30px" width="30px"></a>
-            <a class="fa fa-twitter-square" href='https://twitter.com/mahedi_61' title='Twitter'></a>
-            <a class="fa fa-google-plus-square" href='https://scholar.google.com/citations?hl=en&user=m3MlVBUAAAAJ#' title='Google Scholar'></a>
-            <a class="" href='https://www.researchgate.net/profile/Md_Mahedi_Hasan4' title="ResearchGate"><img src="img/researchgate-solid.svg"  height="30px" width="30px"></a> 
-        </div>
-        </div>
+                        <ul class="navbar-nav">
+                            <li class="active"><a href="index.html" class="nav-link  ">Home</a></li>
+                            <li style="padding-left: 10px;"><a href="publication.html" class="nav-link">publication</a></li>
+                            <li style="padding-left: 10px;"><a href="teaching.html" class="nav-link">teaching</a></li>
+                            <li style="padding-left: 10px;"><a href="research_project.html" class="nav-link">projects</a></li>
+                            <li style="padding-left: 10px;"><a href="education.html" class="nav-link">education</a></li>
+                            <li style="padding-left: 10px;"><a href="experience.html" class="nav-link">experience</a></li>
+                            <li style="padding-left: 10px;"><a href="accolades.html" class="nav-link">accolades</a></li>
+                            <li style="padding-left: 10px;"><a href="extracurricular.html" class="nav-link">extracurricular</a></li>
+                            <li style="padding-left: 10px;"><a href="affiliation.html" class="nav-link">affiliation</a></li>
+                            <li style="padding-left: 10px;"><a href="skills.html" class="nav-link">skills</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div></div>
     </div>
-</div>
-</div>
-<!--end anchor section-->
-
-
-
-<!--top introducing section-->
-<div class="container top_info_content">
-    <div class="row">
-        <div class="col-md-2  col-">
-            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="200px">
-        </div>
-        <div class="col-md-8  col- ">
-            <div class="top_info text-justify text-center">
-                <h1>Md Mahedi Hasan</h1>
-                <h3>M.Sc at IICT, BUET</h3>
-                <h6>Lecturer, Department of Computer Science and Engineering (CSE)<br/>
-                    Manarat International University (MIU), Dhaka, Bangladesh</h6>
-                <h4>Research Interest: Deep Learning, Computer Vision, Biometrics
-                </h4>
-            </div>
-
-        </div>
-    </div>
-</div>
+    <!--end navigation-->
 <!--end section-->
 
 
-<!--navigation start here-->
-<div class="container-fluid nav_des sticky-top">
-<div class="row ">
-    <div class="offset-2 col-md-14">
-        <nav>
-            <div class="navbar navbar-expand-lg navbar-light  " style="margin-left: 40px;">
-                <button type="button" class="navbar-toggler" 
-                        data-toggle="collapse" data-target="#nav1">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="nav1">
 
-                    <ul class="navbar-nav">
-                        <li class="active"><a href="index.html" class="nav-link  ">Home</a></li>
-                        <li style="padding-left: 10px;"><a href="publication.html" class="nav-link">publication</a></li>
-                        <li style="padding-left: 10px;"><a href="teaching.html" class="nav-link">teaching</a></li>
-                        <li style="padding-left: 10px;"><a href="research_project.html" class="nav-link">research projects</a></li>
-                        <li style="padding-left: 10px;"><a href="education.html" class="nav-link">education</a></li>
-                        <li style="padding-left: 10px;"><a href="experience.html" class="nav-link">experience</a></li>
-                        <li style="padding-left: 10px;"><a href="accolades.html" class="nav-link">accolades</a></li>
-                        <li class="gallery" style="padding-left: 10px;"><a href="gallery.html" class="nav-link">gallery</a></li>
-                        <li style="padding-left: 10px;"><a href="" class="nav-link">cv</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div></div>
-</div>
 
-<!--end navigation-->
-<br>
+
 
 
 
 <!--body parts-->
 <div class="container body_des ">
+    <br/>
     <div class="row " >
         <div class="col-md-12 " >
             <h5><img alt='' src='img/lister.png' width='12'/> Year : 2020</h5>
@@ -129,6 +90,7 @@
         </div>
     </div>
 
+    <br/>
     <div class="row " >
         <div class="col-md-12 " >
             <h5><img alt='' src='img/lister.png' width='12'/> Year : 2019</h5>
@@ -223,6 +185,7 @@
         </div>
     </div>
 
+    <br/>
     <div class="row " >
         <div class="col-md-12 " >
             <h5><img alt='' src='img/lister.png' width='12'/> Year : 2017</h5>
