--- a/teaching.html
+++ b/teaching.html
@@ -9,39 +9,49 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/font-awesome.min.css" >
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     <link rel="icon" href="img/favicon.ico">
 </head>
 
 
 <body id="teaching">
-<!--anchor on top -->
-<div class="anchor">
-<div class="container">
-    <div class="row">
+<!--navigation start here-->
+<div class="container-fluid nav_des sticky-top">
+    <div class="row ">
+        <div class="offset-2 col-md-13">
+            <nav>
+                <div class="navbar navbar-expand-lg navbar-light  " style="margin-left: 40px;">
+                    <button type="button" class="navbar-toggler" 
+                            data-toggle="collapse" data-target="#nav1">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="nav1">
 
-        <div class="offset-3  col-md-8 col-">
-            <div class="elements ">
-            <a class="fa fa-github-square"  href='https://github.com/Mahedi-61' title='Github'> </a>
-            <a class="fa fa-linkedin-square"  href='https://www.linkedin.com/in/mahedi-hasan-2a4117147/' title='LinkedIn'></a>
-            <a class="fa fa-reddit-square" href='https://www.reddit.com/user/mahedi61' title='Reddit'></a>
-            <a class="" href='https://orcid.org/0000-0002-6337-3571' title='Orcid'><img src="img/orcid-brands.svg" height="30px" width="30px"></a>
-            <a class="" href='https://dblp.uni-trier.de/pers/hd/h/Hasan:Md_Mahedi' title='dblp'><img src="img/dblp-512.png" height="30px" width="30px"></a>
-            <a class="fa fa-twitter-square" href='https://twitter.com/mahedi_61' title='Twitter'></a>
-            <a class="fa fa-google-plus-square" href='https://scholar.google.com/citations?hl=en&user=m3MlVBUAAAAJ#' title='Google Scholar'></a>
-            <a class="" href='https://www.researchgate.net/profile/Md_Mahedi_Hasan4' title="ResearchGate"><img src="img/researchgate-solid.svg"  height="30px" width="30px"></a> 
-        </div>
-        </div>
+                        <ul class="navbar-nav">
+                            <li class="active"><a href="index.html" class="nav-link  ">Home</a></li>
+                            <li style="padding-left: 10px;"><a href="publication.html" class="nav-link">publication</a></li>
+                            <li class="teaching" style="padding-left: 10px;"><a href="teaching.html" class="nav-link">teaching</a></li>
+                            <li style="padding-left: 10px;"><a href="research_project.html" class="nav-link">projects</a></li>
+                            <li style="padding-left: 10px;"><a href="education.html" class="nav-link">education</a></li>
+                            <li style="padding-left: 10px;"><a href="experience.html" class="nav-link">experience</a></li>
+                            <li style="padding-left: 10px;"><a href="accolades.html" class="nav-link">accolades</a></li>
+                            <li style="padding-left: 10px;"><a href="extracurricular.html" class="nav-link">extracurricular</a></li>
+                            <li style="padding-left: 10px;"><a href="affiliation.html" class="nav-link">affiliation</a></li>
+                            <li style="padding-left: 10px;"><a href="skills.html" class="nav-link">skills</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div></div>
     </div>
-</div>
-</div>
-<!--end anchor section-->
+    <!--end navigation-->
 
 
 <!--top introducing section-->
 <div class="container top_info_content">
     <div class="row">
-        <div class="col-md-2  col-">
-            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="200px">
+        <div class="col-md-3  col-">
+            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="250px">
         </div>
         <div class="col-md-8  col- ">
             <div class="top_info text-justify text-center">
@@ -53,42 +63,31 @@
                 </h4>
             </div>
 
+            <div class="offset-4  col-md-8 col-">
+                <div class="elements ">
+                <a class="fa fa-github-square fa-2x"  style="color:#000;" href='https://github.com/Mahedi-61' title='Github'> </a> &nbsp  &nbsp
+                <a class="ai ai-google-scholar ai-2x" style="color:#000;" href='https://scholar.google.com/citations?hl=en&user=m3MlVBUAAAAJ#' title='Google Scholar'></a> &nbsp  &nbsp
+                <a class="ai ai-google-orcid ai-2x" style="color:#000;" href='https://orcid.org/0000-0002-6337-3571' title='Orcid'></a>
+                <a class="ai ai-dblp ai-2x" style="color:#000;" href='https://dblp.uni-trier.de/pers/hd/h/Hasan:Md_Mahedi' title='dblp'></a> &nbsp  &nbsp
+                <a class="ai ai-researchgate ai-2x" style="color:#000;" href='https://www.researchgate.net/profile/Md_Mahedi_Hasan4' title="ResearchGate"></a> 
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--partition-->
+<div class="container">
+    <div class="row ">
+        <div class="col-md-11">
+           <hr width="1100px;">
         </div>
     </div>
 </div>
 <!--end section-->
 
 
-<!--navigation start here-->
-<div class="container-fluid nav_des sticky-top">
-<div class="row ">
-    <div class="offset-2 col-md-14">
-        <nav>
-            <div class="navbar navbar-expand-lg navbar-light  " style="margin-left: 40px;">
-                <button type="button" class="navbar-toggler" 
-                        data-toggle="collapse" data-target="#nav1">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="nav1">
 
-                    <ul class="navbar-nav">
-                        <li class="active"><a href="index.html" class="nav-link  ">Home</a></li>
-                        <li style="padding-left: 10px;"><a href="publication.html" class="nav-link">publication</a></li>
-                        <li class="teaching" style="padding-left: 10px;"><a href="teaching.html" class="nav-link">teaching</a></li>
-                        <li style="padding-left: 10px;"><a href="research_project.html" class="nav-link">research projects</a></li>
-                        <li style="padding-left: 10px;"><a href="education.html" class="nav-link">education</a></li>
-                        <li style="padding-left: 10px;"><a href="experience.html" class="nav-link">experience</a></li>
-                        <li style="padding-left: 10px;"><a href="accolades.html" class="nav-link">accolades</a></li>
-                        <li style="padding-left: 10px;"><a href="gallery.html" class="nav-link">gallery</a></li>
-                        <li style="padding-left: 10px;"><a href="" class="nav-link">cv</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div></div>
-</div>
-<!--end navigation-->
-<br>
 
 
 
@@ -98,20 +97,15 @@
         <div class="col-md-11 text-justify">
             <h5><img alt='' src='img/lister.png' width='12'/> Undergraduate Courses</h5><br>
             <ul>
-                <li> <b>CSE-411: Artificial Intelligence</b> in 
+                <li> <b>CSE-411: Artificial Intelligence</b> 
                     <a href="https://github.com/Mahedi-61/MIU_CS_411">[Summer-2019]</a></li><br>
-                <li> <b>CSE-437: Computer Vision and Robotics</b> in 
+                <li> <b>CSE-437: Computer Vision and Robotics</b>  
                     <a href="https://github.com/Mahedi-61/MIU_Spring_2019/tree/master/CSE-437">[Spring-2019]</a>,
                     <a href="https://github.com/Mahedi-61/MIU_Fall_2019/tree/master/CSE-437">[Fall-2019]</a></li><br>
-                <li> <b>CSE-433: Neural Networks and Fuzzy Systems</b> in 
+                <li> <b>CSE-433: Neural Networks and Fuzzy Systems</b>  
                     <a href="https://github.com/Mahedi-61/MIU_Fall_2019/tree/master/CSE-433">[Fall-2019]</a></li><br>
-                <li> <b>EEE-101: Electrical Circuit</b> in
-                        [Summer-2016], [Fall-2016], [Summer-2019]</li><br>
-                <li> <b>EEE-102: Basic Electronics</b> in
-                        [Fall-2016], [Summer-2019]</li><br>
-                <li> <b>CSE-209: Digital Logic Design</b> in
-                        [Summer-2017]</li><br>
-                <li> <b>CSE-207: Object Oriented Programming</b> in 
+                <li> <b>CSE-436: Pattern Recognition</b> </li><br>
+                <li> <b>CSE-207: Object Oriented Programming</b>
                 <a href="https://github.com/Mahedi-61/MIU_BPM_119/tree/MIU_CSE_207_F18/master">[Fall-2018]</a><br></li>
             </ul> <br/>
         </div>
