--- a/experience.html
+++ b/experience.html
@@ -51,7 +51,7 @@
 <div class="container top_info_content">
     <div class="row">
         <div class="col-md-3  col-">
-            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="250px">
+            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="230px">
         </div>
         <div class="col-md-8  col- ">
             <div class="top_info text-justify text-center">
@@ -73,15 +73,7 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
-
-<!--partition-->
-<div class="container">
-    <div class="row ">
-        <div class="col-md-11">
-           <hr width="1100px;">
-        </div>
+        <hr width="1100px;">
     </div>
 </div>
 <!--end section-->
@@ -94,7 +86,7 @@
     <div class="row">
 
         <div class="col-md-12 text-justify">
-            <h5><img alt='' src='img/lister.png' width='12'  /> Teaching Experience</h5><br>
+            <h5><img alt='' src='img/lister.png' width='12'  /> Teaching Experiences</h5><br>
             <ul>
                 <li>
                     <h6><b>Lecturer</b> <span style="float: right;">May 2019 - present</span></h6>
@@ -129,7 +121,7 @@
         </div>
 
         <div class="col-md-12 text-justify"> 
-            <h5><img alt='' src='img/lister.png' width='12'  /> Professional Experience</h5><br>
+            <h5><img alt='' src='img/lister.png' width='12'  /> Professional Experiences</h5><br>
             <ul >
                 <li>
                     <h6><b>Assistant Editor</b> <span style="float: right;">March 2015 - present</span> </h6>
