--- a/index.html
+++ b/index.html
@@ -46,12 +46,11 @@
     </div>
     <!--end navigation-->
 
-
 <!--top introducing section-->
 <div class="container top_info_content">
     <div class="row">
         <div class="col-md-3  col-">
-            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="250px">
+            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="230px">
         </div>
         <div class="col-md-8  col- ">
             <div class="top_info text-justify text-center">
@@ -73,17 +72,11 @@
                 </div>
             </div>
         </div>
+
+        <hr width="1100px;">
     </div>
 </div>
 
-<!--partition-->
-<div class="container">
-    <div class="row ">
-        <div class="col-md-11">
-           <hr width="1100px;">
-        </div>
-    </div>
-</div>
 <!--end section-->
 
 
@@ -95,25 +88,20 @@
 <!--body parts-->
 <div class="container body_des">
     <div class="row">
-        <div class="col-md-2">
-            <h5><img  src='img/lister.png' width='12'/> Contact </h5> 
-        </div> 
-        <div class="col-md-4">
-            <p> <br>
-                Room: #220, <br>
-                Manarat International University<br>
-                Ashulia Model Town, Khagan, Ashulia, Dhaka
-            </p>
+        <div class="col-md-12 text-justify">
+            <h5><img alt='' src='img/lister.png' width='12'  /> Introduction </h5>
+             <p>I am a Lecturer in the Department of Computer Science at <a href="https://manarat.ac.bd/">Manarat International University</a>. 
+             Currently, I am also working as a researcher at computer vision and machine learning research group. 
+             My current research focuses on deep learning model for intelligent video surveillance systems.  
+             I have completed my M.Sc. from <a href="https://buet.ac.bd/">Bangladesh University of Engineering & Technology (BUET)</a>, 
+             where I was advised by <a href="https://hossenmustafa.buet.ac.bd/">Dr. Hossen Asiful Mustafa</a>. I received my B.Sc. 
+            at <a href="https://www.kuet.ac.bd/">Khulna University of Engineering and Technology (KUET)</a> under the supervision of <a href="http://www.kuet.ac.bd/eee/ahmad">Dr. Mohiuddin Ahmad. </a></p>
         </div>
-        <div class="col-md-4">
-            <p> <br>
-                Phone : +880-1767064521<br>
-                Email : mahedi@manarat.ac.bd
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbspmahedi0803@gmail.com<br>
-            </p>
-        </div>
-    </div><br>
+    </div>
 
+    <br/>
+
+    <!-- social networks-->
     <div class="row">
         <div class="col-md-12 text-justify">
             <h5><img alt='' src='img/lister.png' width='12'  /> Recent Activities </h5>
@@ -126,11 +114,6 @@
                     <b> Instructor</b> at Code Camp 2019 organized by Manarat International University CSE
                     Club
                 </li><br>
-                <li>
-                    <b>Participant</b> at Robi Datathon Bangladesh 2019, organized by Robi Axiata Ltd at 19 -
-                    20 April 2019
-                </li><br>
-                <li><b>Member </b>at Inter University Tech Fiesta 2012, organized by EEE Association, KUET.</li><br>
             </ul>
         </div>
     </div>
@@ -170,7 +153,6 @@
     </div>
     <br>
 
-
     <!-- social networks-->
     <div class="row">
         <div class="col-md-12">
@@ -183,6 +165,29 @@
                     <a class="fa fa-youtube fa-2x" style="color:#000;" href='https://www.youtube.com/channel/UCgHJ-gsN1eFWRhxDmWC3VDA/playlists?' title='Twitter'></a> &nbsp  &nbsp
                 </div>
             </div>
+        </div>
+    </div>
+    <br>
+
+
+    <!-- Contact-->
+    <div class="row">
+        <div class="col-md-2">
+            <h5><img  src='img/lister.png' width='12'/> Contact </h5> 
+        </div> 
+        <div class="col-md-4">
+            <p> <br>
+                Room: #220, <br>
+                Manarat International University<br>
+                Ashulia Model Town, Khagan, Ashulia, Dhaka
+            </p>
+        </div>
+        <div class="col-md-4">
+            <p> <br>
+                Phone : +880-1767064521<br>
+                Email : mahedi@manarat.ac.bd
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbspmahedi0803@gmail.com<br>
+            </p>
         </div>
     </div>
 
