--- a/publication.html
+++ b/publication.html
@@ -51,7 +51,7 @@
 <div class="container top_info_content">
     <div class="row">
         <div class="col-md-3  col-">
-            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="250px">
+            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="230px">
         </div>
         <div class="col-md-8  col- ">
             <div class="top_info text-justify text-center">
@@ -73,15 +73,7 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
-
-<!--partition-->
-<div class="container">
-    <div class="row ">
-        <div class="col-md-11">
-           <hr width="1100px;">
-        </div>
+        <hr width="1100px;">
     </div>
 </div>
 <!--end section-->
@@ -93,7 +85,7 @@
     <div class="row">
         <div class="col-md-12 text-justify">
             <h5><img alt='' src='img/lister.png' width='12'  />
-                Peer-Reviewed Journal Papers </h5><br>
+                Peer-Reviewed Journal Papers </h5>
                 <ol type="1">
                     <li><b>Hasan, M.M.</b>, Mustafa H.A.: “Multi-level Features Fusion for Robust Pose-based Gait Recognition
                         using RNN,” International Journal of Computer Science and Information Security, Pittsburgh, PA,
@@ -109,10 +101,11 @@
         </div>
     </div>
 
+    <br>
     <div class="row">
         <div class="col-md-12 text-justify">
             <h5><img alt='' src='img/lister.png' width='12'  />
-                Conference Papers </h5><br>
+                Conference Papers </h5>
             <ol type="1">
                 <li><b>Hasan, M.M.</b>, Islam, M.S., Abdullah, S.: “Robust Pose-Based Human Fall Detection Using Recurrent 
                     Neural Network,” IEEE International Conference on Robotics, Automation, Artificial-Intelligence
@@ -140,15 +133,14 @@
                     Conference on Computer and Information Technology (ICCIT). Dhaka, Bangladesh, 2018. 
                     <a href="https://doi.org/10.1109/ICCITECHN.2018.8631921">DOI</a href>
                 </li>
-                <br>
             </ol>
         </div>
     </div><br>
 
+    <br>
     <div class="row">
         <div class="col-md-12 text-justify"><h5><img alt='' src='img/lister.png' width='12'  />
             Submitted Manuscript </h5>
-            <br>
             <ol type="1">
                 <li>Manuscript submitted to IET Computer Vision: <b>Hasan, M.M.</b>, Mustafa H.A., “Learning View-
                     Invariant Features using Stacked Autoencoder for Skeleton-Based Gait Recognition,” </li><br>
