--- a/teaching.html
+++ b/teaching.html
@@ -51,7 +51,7 @@
 <div class="container top_info_content">
     <div class="row">
         <div class="col-md-3  col-">
-            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="250px">
+            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="230px">
         </div>
         <div class="col-md-8  col- ">
             <div class="top_info text-justify text-center">
@@ -73,15 +73,7 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
-
-<!--partition-->
-<div class="container">
-    <div class="row ">
-        <div class="col-md-11">
-           <hr width="1100px;">
-        </div>
+        <hr width="1100px;">
     </div>
 </div>
 <!--end section-->
@@ -95,7 +87,7 @@
 <div class="container body_des">
     <div class="row">
         <div class="col-md-11 text-justify">
-            <h5><img alt='' src='img/lister.png' width='12'/> Undergraduate Courses</h5><br>
+            <h5><img alt='' src='img/lister.png' width='12'/> Undergraduate Courses</h5>
             <ul>
                 <li> <b>CSE-411: Artificial Intelligence</b> 
                     <a href="https://github.com/Mahedi-61/MIU_CS_411">[Summer-2019]</a></li><br>
@@ -112,7 +104,10 @@
 
         <br/>
         <div class="col-md-11 text-justify">
-            <h5><img alt='' src='img/lister.png' width='12'/> Undergraduate Supervision</h5><br>
+            <h5><img alt='' src='img/lister.png' width='12'/> Undergraduate Supervision</h5>
+            <ul>
+                <li>Minhazul Zannat</li>
+            </ul>
         </div>
     </div>
 </div>
