--- a/affiliation.html
+++ b/affiliation.html
@@ -51,7 +51,7 @@
 <div class="container top_info_content">
     <div class="row">
         <div class="col-md-3  col-">
-            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="250px">
+            <img class="rounded-circle" src="img/cup_of_tea.jpg" height="230px">
         </div>
         <div class="col-md-8  col- ">
             <div class="top_info text-justify text-center">
@@ -73,15 +73,7 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
-
-<!--partition-->
-<div class="container">
-    <div class="row ">
-        <div class="col-md-11">
-           <hr width="1100px;">
-        </div>
+        <hr width="1100px;">
     </div>
 </div>
 <!--end section-->
@@ -94,14 +86,13 @@
 <div class="container body_des ">
     <div class="row " >
         <div class="col-md-12 " >
-            <h5><img alt='' src='img/lister.png' width='12'/> Professional Affiliations</h5>
+            <h5><img alt='' src='img/lister.png' width='12'/> Professional Affiliations</h5> <br/>
         </div>
 
             <div class="text-justify">
-                <br/>
                 <ul>
-                    <li><b>Head of Digital Transformation Committee (DTC)</b>, Dept. of CSE, MIU</li>
-                    <li><b>Member</b>, Computer Vision Research Group, Dept. of CSE, MIU</li>
+                    <li><b>Head of Digital Transformation Committee (DTC)</b>, Dept. of CSE, MIU</li> <br/>
+                    <li><b>Member</b>, Computer Vision Research Group, Dept. of CSE, MIU</li> <br/>
                     <li><b>Member</b>, AIBangla, an AI-based research group in Bangladesh</li>
                 </ul>
         </div>
