--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
             <h5><img alt='' src='img/lister.png' width='12'  /> Here I am</h5> <br>
             <div class="offset-1  col-md-4 col-">
                 <div class="elements ">
-                    <a class="fa fa-linkedin fa-2x"  style="color:#000;" href='https://www.linkedin.com/in/mahedi-hasan-2a4117147/' title='LinkedIn'></a> &nbsp  &nbsp
+                    <a class="fa fa-linkedin fa-2x"  style="color:#000;" href='https://www.linkedin.com/in/md-mahedi-hasan-2a4117147/' title='LinkedIn'></a> &nbsp  &nbsp
                     <a class="fa fa-reddit fa-2x" style="color:#000;" href='https://www.reddit.com/user/mahedi61' title='Reddit'></a> &nbsp  &nbsp
                     <a class="fa fa-twitter fa-2x" style="color:#000;" href='https://twitter.com/mahedi_61' title='Twitter'></a> &nbsp  &nbsp
-                    <a class="fa fa-youtube fa-2x" style="color:#000;" href='https://www.youtube.com/channel/UCgHJ-gsN1eFWRhxDmWC3VDA/playlists?' title='Twitter'></a> &nbsp  &nbsp
+                    <a class="fa fa-youtube fa-2x" style="color:#000;" href='https://www.youtube.com/channel/UCgHJ-gsN1eFWRhxDmWC3VDA/playlists?' title='Youtube'></a> &nbsp  &nbsp
                 </div>
             </div>
         </div>
