--- a/index.html
+++ b/index.html
@@ -175,18 +175,18 @@
         <div class="col-md-2">
             <h5><img  src='img/lister.png' width='12'/> Contact </h5> 
         </div> 
-        <div class="col-md-4">
+        <div class="col-md-5">
             <p> <br>
                 Room: #220, <br>
                 Manarat International University<br>
                 Ashulia Model Town, Khagan, Ashulia, Dhaka
             </p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-5">
             <p> <br>
-                Phone : +880-1767064521<br>
-                Email : mahedi@manarat.ac.bd
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbspmahedi0803@gmail.com<br>
+                Email : mahedi_AT_manarat_DOT_ac_DOT_bd<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbspmahedi0803_AT_gmail.com<br>
+                Phone : +880-1767064521 [email is preferable]
             </p>
         </div>
     </div>
